Changes for 1.0.11

- Added -noprompt option. Use with care!
- Added support for T10 device ID.

Changes for 1.0.10

- Added new [OPTIONS] section to config file.
- Added new ISSUE_LIP option for fc targets to issue a LIP after group
  assignment changes.
- Added new KEEP_CONFIG option to keep all options when overwriting a
  configuration file with -writeconfig.
- General cleanup.

Changes for 1.0.9

- Move a user from one group to another when applying the configuration instead
  of deleting from one and adding to another the same user.
- Replace a device on a given LUN when applying the configuration instead of removing
  the old device and assigning the new one.
- If target-oriented access control mode is used, Default_ groups will first be created
  as temporary groups and later renamed.
- Add the ability to specify options (ie: READ_ONLY) in assignments in scst.conf.
- Remove unused references to handler IOs that don't exist and cleanup the write
  configuration function to only write vdisk and vcdrom devices. All other devices
  are automatically claimed by their handler module. I'm not sure how this will work
  with devices we wish to change handlers for.
- Minor fix to readConfig() which wasn't fully allowing for empty groups.

Changes for 1.0.8

- Added the ability to specify options for -assigndev and -replacedev,
  mainly READ_ONLY for now.
- Updated module to accept more than one option for assignDeviceToGroup() and
  replaceDeviceInGroup().
- Incremented module version number and renamed module directory to reflect it.

Changes for 1.0.7

- Added -moveuser, -renamegroup and -ReplaceDev options and necessary -to argument.
- Fixed minor bug in new renameGroup() method in SCST::SCST.

Changes for 1.0.6

- Added -resyncdev option to work with the new SCST resync_size option.
- SCST.pm: Added resyncDevice()
- SCST.pm: General cleanup.

Changes for 1.0.5

- Fixed a removeDevice() case when using -ForceConfig.